--- a/Anun.html
+++ b/Anun.html
@@ -6,7 +6,7 @@
 	<script src="anun.js"></script>
 </head>
 <body>
-	<h1>Անլերենից հայերեն փոքր բառարան</h1>
+	<h1>Անգլերենից հայերեն փոքր բառարան</h1>
 	<img src="usa flag.jpg" alt="HTML5 Icon" width="200" height="100">
 	<img src="armenian flag.png" alt="HTML5 Icon" width="200" height="100">
 	
